performance improvement, adding parallelization